src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ECUSTOMS__IM_Date__c</fullName>
        <description>Incident Manager Check Date</description>
        <inlineHelpText>Incident Manager Check Date</inlineHelpText>
        <label>Resolution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__IM_Status__c</fullName>
        <description>Incident Manager Status</description>
        <inlineHelpText>Incident Manager Status</inlineHelpText>
        <label>Resolution Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__RPSString__c</fullName>
        <label>RPSString</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__RPS_Date__c</fullName>
        <description>Date the Account was screened</description>
        <inlineHelpText>Date the Account was screened</inlineHelpText>
        <label>Restricted Party Screening Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__RPS_DistID_Cleared__c</fullName>
        <label>RPS DistID Cleared</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__RPS_Error__c</fullName>
        <label>RPS Error</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__RPS_Results__c</fullName>
        <label>RPS Results</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__RPS_RiskCountry_Status__c</fullName>
        <defaultValue>&quot;Pending&quot;</defaultValue>
        <description>Sanctioned or Embargoed Country Indicator</description>
        <inlineHelpText>Sanctioned or Embargoed Country Indicator</inlineHelpText>
        <label>Risk Country Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__RPS_Status__c</fullName>
        <defaultValue>&quot;Pending&quot;</defaultValue>
        <description>Restricted Party Screening Status</description>
        <inlineHelpText>Restricted Party Screening Status</inlineHelpText>
        <label>Restricted Party Screening Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Screening_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Either Manually or Programatically set to true for Account RPS Trigger to cause screening</description>
        <label>Screening Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__add_DistributedID__c</fullName>
        <label>Address Distributed IDs</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extra_Ship_Methods__c</fullName>
        <label>Extra Ship Methods</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Preferred_Ship_Method__c</fullName>
        <label>Legacy Preferred Ship Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Margin_Weightage__c</fullName>
        <formula>if( Average_Margin__c * 100 &gt;= 0 &amp;&amp; Average_Margin__c * 100 &lt;= 4, 0,
if( Average_Margin__c * 100 &gt;= 5 &amp;&amp; Average_Margin__c * 100 &lt;= 7, 5,
if( Average_Margin__c * 100 &gt;=8 &amp;&amp; Average_Margin__c * 100 &lt;= 15, 10,
if( Average_Margin__c * 100 &gt;= 16, 15, 0))))</formula>
        <label>Margin Weightage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Of_Sales_Order__c</fullName>
        <label>No Of Sales Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Parts_Ordered__c</fullName>
        <label>Number of Parts Ordered</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Parts_Requested__c</fullName>
        <label>Number of Parts Requested</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Manufacturer\Supplier</fullName>
                </value>
                <value>
                    <fullName>Test Record Type</fullName>
                    <isActive>false</isActive>
                    <label>Test Record Type</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Adddress_Line1__c</fullName>
        <label>Adddress Line1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Code__c</fullName>
        <label>Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Contact_Owner_Name__c</fullName>
        <label>Contact Owner Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <description>For Data Migration/Integration purposes</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__New_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Owner_FullName__c</fullName>
        <formula>Owner.FirstName +&apos; &apos;+ Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner FullName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Primary_Contact_Code__c</fullName>
        <label>Primary Contact Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Primary_Contact_Name__c</fullName>
        <label>Primary Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Secondary_Contact_Code__c</fullName>
        <label>Secondary Contact Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Secondary_Contact_Name__c</fullName>
        <label>Secondary Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Supplier_Number__c</fullName>
        <description>Supplier Number</description>
        <label>Supplier Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Supplier_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to supplier profile</description>
        <label>Supplier Profile</label>
        <referenceTo>QPMS__Supplier_Profile__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Suspect_Enabled__c</fullName>
        <label>Suspect Enabled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__UDF__c</fullName>
        <label>UDF</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request</label>
        <referenceTo>inscor__Request__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Lines_Received_Weightage__c</fullName>
        <formula>if( Sales_Orders_Lines_Received__c = 0, 0,
if(Sales_Orders_Lines_Received__c &gt;= 1 &amp;&amp; Sales_Orders_Lines_Received__c &lt;= 2, 10,
if(Sales_Orders_Lines_Received__c &gt;=3 &amp;&amp; Sales_Orders_Lines_Received__c &lt;= 5, 20,
if(Sales_Orders_Lines_Received__c &gt;= 6, 25, 0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Order Lines Received Weightage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Orders_Lines_Received__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sales Orders Lines Received</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Sales_Weightage__c</fullName>
        <formula>if(Total_Sales__c &gt;= 0 &amp;&amp; Total_Sales__c &lt;= 4999, 0,
if(Total_Sales__c &gt;= 5000 &amp;&amp; Total_Sales__c &lt;= 19999, 5,
if(Total_Sales__c &gt;=20000 &amp;&amp; Total_Sales__c &lt;= 49999, 10,
if(Total_Sales__c &gt;=50000 &amp;&amp; Total_Sales__c &lt;= 99999, 15,
if(Total_Sales__c &gt;= 100000, 20, 0)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Sales Weightage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Sales__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Credit_Limit__c</fullName>
        <label>Vendor Credit Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YayPay_Error_Message__c</fullName>
        <label>YayPay Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>YayPay_Last_Sync_Date__c</fullName>
        <label>YayPay Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3DisableDuplicateCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Duplicate Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3Index__c</fullName>
        <label>Duplicate Check Index</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Account_Number__c</fullName>
        <label>Account #</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Account_Region__c</fullName>
        <label>Account Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Account_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Account_Terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Terms</label>
        <referenceTo>inscor__Account_Terms__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Account_Type1__c</fullName>
        <inlineHelpText>Used for general categorization of the account.</inlineHelpText>
        <label>Account Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Repair Station</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Airline</fullName>
                </value>
                <value>
                    <fullName>End-User</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>PMA Mfg</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Mfg</fullName>
                </value>
                <value>
                    <fullName>Surplus Supplier</fullName>
                </value>
                <value>
                    <fullName>New Parts Distributor</fullName>
                </value>
                <value>
                    <fullName>Other - Not Product Related</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Sales Rep.</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Account_Type__c</fullName>
        <label>Account Type - RETIRED</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Account_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Accounting_Type__c</fullName>
        <description>Required by most Financial Packages to determine whether a Customer and/or Vendor.</description>
        <inlineHelpText>Required by most Financial Packages to determine whether a Customer and/or Vendor.</inlineHelpText>
        <label>Accounting Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>Customer and Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Auto_Assign_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Assign Account#?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Auto_Send_Invoices__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, Invoices will be emailed to the Billing Contact selected above.</inlineHelpText>
        <label>Auto Send Invoices?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Business_ID__c</fullName>
        <inlineHelpText>Tax ID #</inlineHelpText>
        <label>Business ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__CQ_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CQ Approved - RETIRED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Comments__c</fullName>
        <label>Comments - RETIRED</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Credit_Available__c</fullName>
        <label>Credit Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Credit_Limit__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Customer_Class__c</fullName>
        <label>Customer Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Customer_Logo__c</fullName>
        <label>Customer Logo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__Customer_Requirements__c</fullName>
        <inlineHelpText>To capture any customer requirements to be referenced by quality and shipping.</inlineHelpText>
        <label>Customer Requirements</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__Customer_Type1__c</fullName>
        <inlineHelpText>Used for categorizing the type of customer.</inlineHelpText>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Customer_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Customer_Type__c</fullName>
        <label>Customer Type - RETIRED</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Airline</fullName>
                </value>
                <value>
                    <fullName>End User</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Default_Incoterms__c</fullName>
        <inlineHelpText>Default Incoterm requested by customer.</inlineHelpText>
        <label>Default Incoterms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Incoterms</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Default_Port_Dest__c</fullName>
        <inlineHelpText>The default port or destination for the incoterm selected.</inlineHelpText>
        <label>Default Port/Dest</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__End_Use_Certificate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For recording if customer has supplied an acceptable End-Use Certificate.</inlineHelpText>
        <label>End Use Certificate?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Export_Control__c</fullName>
        <label>Export Control</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Export Control</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Finance_Contact__c</fullName>
        <inlineHelpText>This field is used to designate the email address that should be receiving notifications for credit issues</inlineHelpText>
        <label>Finance Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>inscor__Hide_from_CQ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide from CQ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Hide_from_Lease__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide from Lease</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Hide_from_PO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide from PO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Hide_from_RFQ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide from RFQ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Hide_from_RO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide from RO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Hide_from_SO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide from SO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Hide_from_WO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide from WO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Major_Region__c</fullName>
        <label>Major Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Latin America and the Caribbean</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>Oceania</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__PO_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PO Approved - RETIRED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Preferred_Carrier__c</fullName>
        <inlineHelpText>To capture the preferred carrier for the customer.</inlineHelpText>
        <label>Preferred Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Ship_Carrier</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Preferred_Ship_Account__c</fullName>
        <label>Preferred Ship Account #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Preferred_Ship_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Ship Method</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>inscor__Ship_Method__c.inscor__Account__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>inscor__Ship_Method__c.inscor__Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>inscor__Ship_Method__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__QTS_Ratio__c</fullName>
        <label>QTS Ratio</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inscor__RFQ_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RFQ Approved - RETIRED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__RO_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RO Approved - RETIRED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Region__c</fullName>
        <label>Region - RETIRED</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Remit_To_City__c</fullName>
        <label>Remit To City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Remit_To_Postal_Code__c</fullName>
        <label>Remit To Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Remit_To_State__c</fullName>
        <label>Remit To State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Remit_To_Street__c</fullName>
        <label>Remit To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Remit_to_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Remit to Country</label>
        <referenceTo>inscor__Country__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Resale_Number__c</fullName>
        <label>Resale Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Risk_Level__c</fullName>
        <label>Risk Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low Risk</fullName>
                </value>
                <value>
                    <fullName>Moderate Risk</fullName>
                </value>
                <value>
                    <fullName>High Risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__SO_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SO Approved - RETIRED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Sales_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Primary salesperson responsible for this Account.</inlineHelpText>
        <label>Sales Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Ship_Terms__c</fullName>
        <label>Ship Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Shipping_Terms</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Shipping_Instructions__c</fullName>
        <inlineHelpText>Account&apos;s default shipping instructions.</inlineHelpText>
        <label>Shipping Instructions</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__Terms__c</fullName>
        <label>Terms</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Total_A_R__c</fullName>
        <label>Total A/R</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Open_Release_Value__c</fullName>
        <inlineHelpText>Total value in open releases ready to ship.</inlineHelpText>
        <label>Total Open Release Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>